[package]
name = "base65536"
version = "0.3.1"
authors = ["Nuew <code@nuew.net>"]
license = "Apache-2.0"
description = "Unicode's answer to base64"
repository = "https://github.com/nuew/base65536"
documentation = "https://docs.rs/base65536"
readme = "README.md"
keywords = ["encode", "decode", "utf-8"]
categories = ["encoding"]

[badges]
travis-ci = { repository = "nuew/base65536", branch = "master" }

[features]
default = ["fnv"]
nightly = []

[dependencies]
fnv = { version = "1", optional = true }
lazy_static = "0.2"
